--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="Based Beats - Make beats onchain with classic MPC sampler" />
-    <meta property="og:title" content="Based Beats" />
+    <meta property="og:title" content="BeatPad" />
     <meta property="og:description" content="Make beats onchain. Classic MPC interface. Web3 native." />
     <meta property="og:type" content="website" />
     <title>Based Beats - Make Beats Onchain</title>
